cabal-version:      3.0
name:               hlox
version:            0.1.0.0
license:            MIT
license-file:       LICENCE
author:             Sup#2.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Hlox, Lexer
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: GHC2021

executable hlox
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hlox

    hs-source-dirs:   src
    default-language: GHC2021

test-suite hlox-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hlox
