cabal-version:      3.0
name:               hlox
version:            0.1.0.0
license:            MIT
license-file:       LICENCE
author:             Sup#2.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Lexer,
        Lexer.Tokens,
        Lexer.Errors,
        Parser,
        Parser.Nodes,
        Parser.Ops,
        Parser.Errors,
    other-modules:
        Lexer.Helpers,
        Parser.Helpers,
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   hlox
    default-language: GHC2021

executable hlox
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        hlox

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite hlox-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Test.hs
    other-modules:
        Util.Syntax,
        Test.Lexer,
        Test.Parser,
    build-depends:
        base ^>=4.18.3.0,
        hlox,
        tasty,
        tasty-hunit >=0.9,
